--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,103 +2,270 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Item Manager</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flask Auth App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f4;
+            padding: 30px;
+            background: #f4f7f6;
         }
         h1 {
+            text-align: center;
             color: #333;
         }
-        form, .items {
+        h2 {
             margin-top: 20px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            color: #444;
         }
-        input[type="text"] {
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        form {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            width: 100%;
+            max-width: 400px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        input {
+            display: block;
+            width: 100%;
             padding: 10px;
-            width: 300px;
-            margin-right: 10px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 16px;
         }
         button {
-            padding: 10px 15px;
-            background-color: #28a745;
+            padding: 10px;
+            width: 100%;
+            background-color: #007BFF;
             color: white;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
+            border-radius: 5px;
         }
-        button.delete {
-            background-color: #dc3545;
-            margin-left: 10px;
+        button:hover {
+            background-color: #0056b3;
         }
-        .item {
-            padding: 10px 0;
-            border-bottom: 1px solid #ccc;
+        #response {
+            margin-top: 20px;
+            text-align: center;
+            color: green;
+            font-size: 16px;
+        }
+        .protected-content {
+            margin-top: 30px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Item Manager</h1>
 
-    <form id="itemForm">
-        <input type="text" id="itemName" placeholder="Enter item name" required />
-        <button type="submit">Add Item</button>
-    </form>
+    <h1>Flask Auth Frontend</h1>
 
-    <div class="items" id="itemList">
-        <!-- Items will be listed here -->
+    <div class="form-container">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <input type="email" id="regEmail" placeholder="Email" required>
+            <input type="password" id="regPassword" placeholder="Password" required>
+            <button type="submit">Register</button>
+        </form>
+
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="email" id="loginEmail" placeholder="Email" required>
+            <input type="password" id="loginPassword" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+
+        <div class="protected-content">
+            <h2>Access Protected Route</h2>
+            <button onclick="accessProtected()">Access Protected</button>
+            <div id="response"></div>
+        </div>
     </div>
 
     <script>
-        const API_URL = 'http://localhost:5000/items';
+        let token = '';
 
-        async function fetchItems() {
-            const res = await fetch(API_URL);
-            const items = await res.json();
-            const itemList = document.getElementById('itemList');
-            itemList.innerHTML = '';
-
-            items.forEach(item => {
-                const div = document.createElement('div');
-                div.className = 'item';
-                div.innerHTML = `
-                    ${item.name}
-                    <button class="delete" onclick="deleteItem('${item._id}')">Delete</button>
-                `;
-                itemList.appendChild(div);
-            });
-        }
-
-        async function addItem(e) {
+        // Register form submission
+        document.getElementById('registerForm').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const name = document.getElementById('itemName').value;
-            if (!name) return;
+            const email = document.getElementById('regEmail').value;
+            const password = document.getElementById('regPassword').value;
 
-            await fetch(API_URL, {
+            const res = await fetch('http://127.0.0.1:5000/register', {
                 method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ name })
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({ email, password })
             });
 
-            document.getElementById('itemName').value = '';
-            fetchItems();
-        }
+            const data = await res.json();
+            document.getElementById('response').innerText = data.message;
+        });
 
-        async function deleteItem(id) {
-            await fetch(`${API_URL}/${id}`, {
-                method: 'DELETE'
+        // Login form submission
+        document.getElementById('loginForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = document.getElementById('loginEmail').value;
+            const password = document.getElementById('loginPassword').value;
+
+            const res = await fetch('http://127.0.0.1:5000/login', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({ email, password })
             });
-            fetchItems();
+
+            const data = await res.json();
+            if (data.token) {
+                token = data.token;
+                document.getElementById('response').innerText = 'Login successful! Token stored.';
+            } else {
+                document.getElementById('response').innerText = data.message;
+            }
+        });
+
+        // Access protected route
+        async function accessProtected() {
+            const res = await fetch('http://127.0.0.1:5000/protected', {
+                method: 'GET',
+                headers: { 'Authorization': `Bearer ${token}` }
+            });
+
+            const data = await res.json();
+            document.getElementById('response').innerText = data.message;
         }
-
-        document.getElementById('itemForm').addEventListener('submit', addItem);
-
-        fetchItems(); // Initial load
     </script>
 </body>
 </html>
+from flask import Flask, request, jsonify
+from flask_bcrypt import Bcrypt
+import jwt
+import datetime
+from pymongo import MongoClient
+from flask_cors import CORS  # Import CORS
+from bson import ObjectId  # To handle MongoDB ObjectId
+
+# === CONFIGURATION ===
+SECRET_KEY = 'secret'
+MONGO_URI = 'mongodb+srv://shravani:shravani@cluster0.pkfjesd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+
+# === INITIALIZE APP ===
+app = Flask(__name__)
+bcrypt = Bcrypt(app)
+CORS(app)  # Enable CORS for all routes
+
+# === DATABASE SETUP ===
+client = MongoClient(MONGO_URI)
+db = client['insta']  # Define your database name
+users_collection = db.users
+posts_collection = db.posts
+stories_collection = db.stories
+
+# === TOKEN CREATION ===
+def create_token(user_id):
+    payload = {
+        'user_id': str(user_id),
+        'exp': datetime.datetime.utcnow() + datetime.timedelta(hours=1)
+    }
+    return jwt.encode(payload, SECRET_KEY, algorithm='HS256')
+
+# === ROUTES ===
+
+@app.route('/register', methods=['POST'])
+def register():
+    data = request.get_json()
+    if users_collection.find_one({'email': data['email']}):
+        return jsonify({'message': 'User already exists'}), 400
+
+    hashed_pw = bcrypt.generate_password_hash(data['password']).decode('utf-8')
+    users_collection.insert_one({'email': data['email'], 'password': hashed_pw})
+    return jsonify({'message': 'User registered successfully'})
+
+@app.route('/login', methods=['POST'])
+def login():
+    data = request.get_json()
+    user = users_collection.find_one({'email': data['email']})
+    if not user or not bcrypt.check_password_hash(user['password'], data['password']):
+        return jsonify({'message': 'Invalid credentials'}), 401
+
+    token = create_token(user['_id'])
+    return jsonify({'token': token})
+
+@app.route('/protected', methods=['GET'])
+def protected():
+    token = request.headers.get('Authorization')
+    if not token:
+        return jsonify({'message': 'Token is missing'}), 401
+
+    try:
+        decoded = jwt.decode(token, SECRET_KEY, algorithms=['HS256'])
+        user_id = decoded['user_id']
+        return jsonify({'message': f'Authenticated user {user_id}'}), 200
+    except jwt.ExpiredSignatureError:
+        return jsonify({'message': 'Token expired'}), 401
+    except jwt.InvalidTokenError:
+        return jsonify({'message': 'Invalid token'}), 401
+
+# === NEW FEATURE: CREATE POST ===
+@app.route('/post', methods=['POST'])
+def create_post():
+    token = request.headers.get('Authorization')
+    if not token:
+        return jsonify({'message': 'Token is missing'}), 401
+
+    try:
+        decoded = jwt.decode(token, SECRET_KEY, algorithms=['HS256'])
+        user_id = decoded['user_id']
+    except jwt.ExpiredSignatureError:
+        return jsonify({'message': 'Token expired'}), 401
+    except jwt.InvalidTokenError:
+        return jsonify({'message': 'Invalid token'}), 401
+
+    data = request.get_json()
+    post_data = {
+        'user_id': ObjectId(user_id),
+        'description': data['description'],
+        'image_url': data['image_url'],
+        'created_at': datetime.datetime.utcnow()
+    }
+    posts_collection.insert_one(post_data)
+    return jsonify({'message': 'Post created successfully'}), 201
+
+# === NEW FEATURE: ADD STORY ===
+@app.route('/story', methods=['POST'])
+def add_story():
+    token = request.headers.get('Authorization')
+    if not token:
+        return jsonify({'message': 'Token is missing'}), 401
+
+    try:
+        decoded = jwt.decode(token, SECRET_KEY, algorithms=['HS256'])
+        user_id = decoded['user_id']
+    except jwt.ExpiredSignatureError:
+        return jsonify({'message': 'Token expired'}), 401
+    except jwt.InvalidTokenError:
+        return jsonify({'message': 'Invalid token'}), 401
+
+    data = request.get_json()
+    expiration_time = datetime.datetime.utcnow() + datetime.timedelta(hours=24)  # Default expiration is 24 hours from now
+    if 'expiration' in data:
+        expiration_time = datetime.datetime.utcnow() + datetime.timedelta(hours=data['expiration'])
+
+    story_data = {
+        'user_id': ObjectId(user_id),
+        'image_url': data['image_url'],
+        'created_at': datetime.datetime.utcnow(),
+        'expires_at': expiration_time
+    }
+    stories_collection.insert_one(story_data)
+    return jsonify({'message': 'Story added successfully'}), 201
+
+# === MAIN EXECUTION ===
+if __name__ == '__main__':
+    app.run(debug=True)
